yaml/v2api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2api
  labels:
    app: v2api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v2api
  template:
    metadata:
      labels:
        app: v2api
    spec:
      containers:
      - name: v2api-c
        image: dev070555/v2api-test:v1.0
        command: ['npm', 'run', 'express']
        ports:
        - name: v2api-port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: v2api-svc
  labels:
    app: v2api
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: v2api-port
  selector:
    app: v2api
  type: ClusterIP
